changement des texte

--- a/omar.html
+++ b/omar.html
@@ -1307,37 +1307,37 @@
 					<ul class="row clients-dotted list-inline">
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/1.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/1 (1).png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/2.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/2.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/3.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/3.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/4.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/4.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/5.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/5.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/6.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/6.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/brands/7.jpg" alt="client" />
+								<img class="img-fluid" src="demo_files/images/brands/7.png" alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
