--- a/omar.html
+++ b/omar.html
@@ -300,23 +300,36 @@
 									
 							</div>
 
-							
 
-							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
-								data-x="665"
-								data-y="300" 
-								data-speed="300"
-								data-start="2500"
-								data-easing="Power3.easeInOut"
-								data-splitin="none"
-								data-splitout="none"
-								data-elementdelay="0.1"
-								data-endelementdelay="0.1"
-								data-endspeed="300"
+							<div class="tp-caption sfb tp-resizeme"
+							data-x="50"
+							data-y="410" 
+							data-speed="500"
+							data-start="1500"
+							data-easing="Power3.easeIn"
+							data-splitin="none"
+							data-splitout="none"
+							data-elementdelay="1"
+							data-endelementdelay="0.1"
+							data-endspeed="500"
+							style="z-index: 4; max-width: auto;">
+								<a class="btn btn-warning btn-lg" href="#"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
+						</div>
 
-								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-warning btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
-							</div>
+						<div class="tp-caption sfb tp-resizeme"
+							data-x="250"
+							data-y="410" 
+							data-speed="500"
+							data-start="1500"
+							data-easing="Power3.easeInOut"
+							data-splitin="none"
+							data-splitout="none"
+							data-elementdelay="0.1"
+							data-endelementdelay="0.1"
+							data-endspeed="500"
+							style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
+								<a class="btn btn-default btn-lg" href="#"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
+						</div>
 						</li>
 
 						<!-- SLIDE  -->
@@ -370,11 +383,11 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" href="#"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" href="#">Service Résidentiel  &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
-								data-x="250"
+								data-x="300"
 								data-y="410" 
 								data-speed="500"
 								data-start="1500"
@@ -385,7 +398,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="#">immeuble Résidentiel  &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
@@ -438,11 +451,11 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" href="#">Immeubles corporatifs &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" href="#">Service corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
-								data-x="250"
+								data-x="300"
 								data-y="410" 
 								data-speed="500"
 								data-start="1500"
@@ -453,7 +466,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#"> Corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="#">Immeuble Corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
