--- a/page 2.html
+++ b/page 2.html
@@ -218,7 +218,7 @@
 
 					<div class="text-center clearfix">
 						<h1>Bienvenu chez <span>Rocket Elevators</span>.</h1>
-						<h2 class="col-sm-10 offset-sm-1 mb-0 fw-400">Service Résidentiel.</h2>
+						<h2 class="col-sm-10 offset-sm-1 mb-0 fw-400">Service Commercial et Corporatif.</h2>
 					</div>
 
 				</div>
@@ -236,10 +236,10 @@
 				<!-- IMAGE -->
 			
 				<figure class="mb-20">
-					<img class="img-fluid" src="demo_files/images/thematics/construction/w7-min.jpg"  alt="">
+					<img class="img-fluid" src="demo_files/images/thematics/construction/w5-min.jpg"  alt="" >
 				</figure>
 			
-				<h2><a href="blog-single-default.html">Ascenseur Résidentiel</a></h2>
+				<h2><a href="blog-single-default.html">Ascenseur Corporatif</a></h2>
 
 				<ul class="blog-post-info list-inline">
 					<li>
@@ -259,6 +259,35 @@
 			
 
 		</div>
+
+		<div class="blog-post-item">
+
+			<!-- IMAGE -->
+		
+			<figure class="mb-20">
+				<img class="img-fluid" src="demo_files/images/thematics/construction/w4-min.jpg"  alt="" >
+			</figure>
+		
+			<h2><a href="blog-single-default.html">Ascenseur Commercial</a></h2>
+
+			<ul class="blog-post-info list-inline">
+				<li>
+					<a href="#">
+						<i class="fa fa-clock-o"></i> 
+						<span class="font-lato">3 juin , 2020</span>
+					</a>
+				</li>
+				<li>
+					
+				</li>
+			</ul>
+			<div class="text-center clearfix">
+			<p>Adapter une maison pour un proche à mobilité réduite requiert de prendre en considération les normes qui régissent les différents éléments qui devront être intégrés dans l’habitation pour assurer à cette personne confort et sécurité. Comme l’ascenseur n’échappe pas à cette règle et qu'il jouera un rôle central dans l’adaptabilité de votre demeure, voici donc tout ce que vous devez savoir sur sa construction.</p>
+		</div>
+
+		
+
+	</div>
 
 
 			<!-- FOOTER -->
