--- a/omar.html
+++ b/omar.html
@@ -176,17 +176,17 @@
 										</a>
 										<ul class="dropdown-menu">
 											<li>
-												<a href="pack-realestate-property-list-1.html">
+												<a href="page 1.html">
 													Résidentiel
 												</a>
 											</li>
 											<li>
-												<a href="pack-realestate-home-2.html">
+												<a href="page 2.html">
 													Corporatif
 												</a>
 											</li>
 											<li>
-												<a href="pack-realestate-home-3.html">
+												<a href="page 2.html">
 													Soumission
 												</a>
 											</li>
@@ -596,16 +596,6 @@
 											<span class="overlay dark-5"></span>
 											<span class="inner">
 
-												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w1-min.jpg" data-plugin-options='{"type":"image"}'>
-													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-												<!-- details -->
-												<a class="ico-rounded lightbox" href="ajax/portfolio-detail-modal-6.html" data-plugin-options='{"type":"ajax", "closeOnBgClick":false}'>
-													<span class="glyphicon glyphicon-option-horizontal fs-20"></span>
-												</a>
-
 											</span>
 										</span>
 
@@ -614,10 +604,7 @@
 
 									<div class="item-box-desc">
 										<h3>Développement durable</h3>
-										<ul class="list-inline categories m-0">
-											<li><a href="#">Architecture</a></li>
-											<li><a href="#">Design</a></li>
-										</ul>
+										
 									</div>
 
 								</div>
