--- a/omar.html
+++ b/omar.html
@@ -141,7 +141,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main">
 									<li class="dropdown active"><!-- HOME -->
-										<a class="dropdown-toggle" href="#">
+										<a class="dropdown-toggle" href="omar.html">
 											HOME
 
 									</li>
@@ -161,7 +161,7 @@
 												</a>
 											</li>
 											<li>
-												<a href="page 2.html">
+												<a href="page 3.html">
 													Soumission
 												</a>
 											</li>
@@ -292,7 +292,7 @@
 							data-endelementdelay="0.1"
 							data-endspeed="500"
 							style="z-index: 4; max-width: auto;">
-								<a class="btn btn-warning btn-lg" href="#"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
+								<a class="btn btn-warning btn-lg" style="background-color: cyan ;" href="#"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
 						</div>
 
 						<div class="tp-caption sfb tp-resizeme"
@@ -362,7 +362,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" href="#">Service Résidentiel  &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" style="background-color: cyan;"  href="#">Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
@@ -430,7 +430,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" href="#">Service corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" style="background-color: cyan;" href="#"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
@@ -529,7 +529,7 @@
 						<h2 class="fs-40 fw-300">○	L’entreprise est en affaires depuis 1976 </h2>
 						<a class="btn btn-default btn-lg" href="#">Contacter Nous <i class="fa fa-angle-right"></i></a> 
 						&nbsp;          &nbsp; 
-						<a class="btn btn-warning btn-lg" href="#">Soumission <i class="fa fa-angle-right"></i></a>
+						<a class="btn btn-warning btn-lg" href="#"  style="background-color: chartreuse;">Soumission <i class="fa fa-angle-right"></i></a>
 					</div>
 
 				</div>
