--- a/page 1.html
+++ b/page 1.html
@@ -119,7 +119,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main">
 									<li class="dropdown active"><!-- HOME -->
-										<a class="dropdown-toggle" href="#">
+										<a class="dropdown-toggle" href="omar.html">
 											HOME
 
 									</li>
@@ -139,11 +139,12 @@
 												</a>
 											</li>
 											<li>
-												<a href="page 2.html">
+												<a href="page 3.html">
 													Soumission
 												</a>
 											</li>
 										</ul>
+										
 									</li>
 									<li class="dropdown"><!-- FEATURES -->
 										<a class="dropdown-toggle" href="#">
