--- a/omar.html
+++ b/omar.html
@@ -453,14 +453,10 @@
 
 				</div>
 			</div>
-			<!-- /REVOLUTION SLIDER -->
 
-
+			
 			<hr class="m-0" /><!-- 1px line separator -->
-
-
-
-
+			<hr class="m-0" /><!-- 1px line separator -->
 
 			
 			<!-- Services -->
