--- a/index-omar.html
+++ b/index-omar.html
@@ -292,7 +292,7 @@
 							data-endelementdelay="0.1"
 							data-endspeed="500"
 							style="z-index: 4; max-width: auto;">
-								<a class="btn btn-warning btn-lg" style="background-color: cyan ;" href="#"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
+								<a class="btn btn-warning btn-lg" style="background-color: cyan ;" href="omar.html"> Nos Services &nbsp; <i class="fa fa-angle-right"></i></a>
 						</div>
 
 						<div class="tp-caption sfb tp-resizeme"
@@ -307,7 +307,7 @@
 							data-endelementdelay="0.1"
 							data-endspeed="500"
 							style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-								<a class="btn btn-default btn-lg" href="#"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
+								<a class="btn btn-default btn-lg" href="page 3.html"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
 						</div>
 						</li>
 
@@ -362,7 +362,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" style="background-color: cyan;"  href="#">Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" style="background-color: cyan;"  href="page 3.html">Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
@@ -377,7 +377,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#">immeuble Résidentiel  &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="omar.html">immeuble Résidentiel  &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
@@ -430,7 +430,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-warning btn-lg" style="background-color: cyan;" href="#"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-warning btn-lg" style="background-color: cyan;" href="page 3.html"> Soumission &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption sfb tp-resizeme"
@@ -445,7 +445,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 6; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-default btn-lg" href="#">Immeuble Corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="omar.html">Immeuble Corporatif &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
@@ -454,7 +454,7 @@
 				</div>
 			</div>
 
-			
+
 			<hr class="m-0" /><!-- 1px line separator -->
 			<hr class="m-0" /><!-- 1px line separator -->
 
@@ -518,7 +518,7 @@
 						<h2 class="fs-40 fw-300">○	L’entreprise est en affaires depuis 1976 </h2>
 						<a class="btn btn-default btn-lg" href="#">Contacter Nous <i class="fa fa-angle-right"></i></a> 
 						&nbsp;          &nbsp; 
-						<a class="btn btn-warning btn-lg" href="#"  style="background-color: chartreuse;">Soumission <i class="fa fa-angle-right"></i></a>
+						<a class="btn btn-warning btn-lg" href="page 3.html"  style="background-color: chartreuse;">Soumission <i class="fa fa-angle-right"></i></a>
 					</div>
 
 				</div>
@@ -1431,7 +1431,7 @@
 									<label for="contact:attachment"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pièce jointe</font></font></label>
 
 									<!-- custom file upload -->
-									<div class="input-group"><input class="custom-file-upload custom-file-upload-hidden" type="file" id="file" name="contact[attachment]" data-btn-text="Select a File" tabindex="-1" style="position: absolute; left: -9999px;"></div>
+									<div class="input-group"><input class="custom-file-upload custom-file-upload-hidden" type="file" id="file" name="contact[attachment]" data-btn-text="sélectionner un fichier" tabindex="-1" style="position: absolute; left: -9999px;"></div>
 									<small class="text-muted block"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Taille maximale du fichier: 10 Mo (zip / pdf / jpg / png)</font></font></small>
 
 								</div>
@@ -1489,7 +1489,7 @@
 
 
 
-			<!-- FOOTER -->
+			<--FOOTER -->
 			<footer id="footer">
 				<div class="container">
 
@@ -1499,11 +1499,11 @@
 						<!-- col #1 -->
 						<div class="col-md-8">
 
-							<h3 class="letter-spacing-1">WHY US?</h3>
+							<h3 class="letter-spacing-1">POURQUOI NOUS</h3>
 
 							<!-- Small Description -->
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet hendrerit volutpat. Sed in nunc nec ligula consectetur mollis in vel justo. Vestibulum ante ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet hendrerit volutpat.
+								Que ce soit pour notre approche par compétences, notre professionnalisme, notre intégrité ou nos services sur mesure, soyez assuré que notre priorité est votre succès dans le développement .
 							</p>
 							<h2>581-701-0303</h2>
 						</div>
@@ -1512,16 +1512,16 @@
 					
 						<!-- col #2 -->
 						<div class="col-md-4">
-							<h3 class="letter-spacing-1">KEEP IN TOUCH</h3>
+							<h3 class="letter-spacing-1">RESTER EN CONTACT</h3>
 
 							<!-- Newsletter Form -->
-							<p>Subscribe to Our Newsletter to get Important News & Offers</p>
+							<p>Abonnez-vous à notre lettre d'information pour obtenir des nouvelles et des offres importantes</p>
 
 							<form class="validate" action="php/newsletter.php" method="post" data-success="Subscribed! Thank you!" data-toastr-position="bottom-right">
 								<div class="input-group">
 									<input type="email" id="email" name="email" class="form-control required" placeholder="Enter your Email">
 									<span class="input-group-btn">
-										<button class="btn btn-success" type="submit">Subscribe</button>
+										<button class="btn btn-success" type="submit">Souscrire</button>
 									</span>
 								</div>
 							</form>
