--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 									<li class="dropdown active"><!-- HOME -->
 										<a class="dropdown-toggle" href="index.html">
 											HOME
-
+										</a>
 									</li>
 									<li class="dropdown active"><!-- Service -->
-										<a class="dropdown-toggle" href="#">
+										<a class="dropdown-toggle">
 											SERVICES
 										</a>
 										<ul class="dropdown-menu">
